@@ -2,7 +2,7 @@
 .SH NAME
 gpstrip - discard symbols from object file
 .SH SYNOPSIS
-.B gpstrip [options] [file]
+.B gpstrip [options] [file(s)]
 .SH WARNING
 The information in this man page is an extract from the full documentation of
 gputils and is limited to the meaning of the options.  For complete and 
